kubernetes/service-mesh/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: oci-sm-app-ingress
  namespace: oci-sm-app
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 443
      targetPort: 8080
      name: https
  selector:
    servicemesh.oci.oracle.com/ingress-gateway-deployment: oci-sm-app-ingress-gateway-deployment
  type: LoadBalancer
